--- a/.github/workflows/main_pavia.yml
+++ b/.github/workflows/main_pavia.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Run R scripts
       run: |
         source('gather_clean_data_pavia.R')
-        rmarkdown::render('flexdashboard_bcrc.Rmd', output_file = 'pavia.html')
+        rmarkdown::render('flexdashboard_pavia.Rmd', output_file = 'pavia.html')
       shell: Rscript {0}
 
     - name: Send files to cnftstats repo
